--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <title>github</title>
 </head>
 <body>
-<h1ii This is github official website</h1>
+<h1> This is github official website</h1>
 </body>
+</html>
